Django improvements
